fixed drag and drop only on the RootPage